--- a/plugins/panel/panelContent.jade
+++ b/plugins/panel/panelContent.jade
@@ -22,15 +22,16 @@ div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp", style="heig
 								md-icon(md-font-icon="{{option.firstSelectedIcon}}", class="fa", ng-if="option.firstSelected")
 								md-icon(md-font-icon="{{option.secondSelectedIcon}}", class="fa", ng-if="option.secondSelected")
 
-	.panelContentFilter(ng-if="vm.showFilter", layout="row")
-		div(flex="85")
-			md-input-container(md-no-float="")
-				input(type="text", ng-model="vm.filterInputText", placeholder="Filter")
-		div(flex="15", ng-if="vm.showClearFilterButton")
-			md-button.md-icon-button(ng-click="vm.clearFilter()", aria-label="Clear filter")
-				md-icon(md-font-icon="fa-times-circle", class="fa")
+	.panelContentContainer
+		.panelContentFilter(ng-if="vm.showFilter", layout="row")
+			div(flex="85")
+				md-input-container(md-no-float="")
+					input(type="text", ng-model="vm.filterInputText", placeholder="Filter")
+			div(flex="15", ng-if="vm.showClearFilterButton")
+				md-button.md-icon-button(ng-click="vm.clearFilter()", aria-label="Clear filter")
+					md-icon(md-font-icon="fa-times-circle", class="fa")
 
-	md-content(id="content")
+		md-content(id="content")
 
 	div(ng-if="vm.showHelp")
 		md-button.md-fab.md-mini#helpButton(aria-label="Help")
