ISSUE #125 - Code reader working, Oculus view working

--- a/public/plugins/qrCodeReader/qrCodeReader.css
+++ b/public/plugins/qrCodeReader/qrCodeReader.css
@@ -1,3 +1,8 @@
-qr-code-reader {
-  position: absolute;
+md-dialog.qrCodeReaderDialog {
+  max-height: 90%;
+}
+
+md-dialog.qrCodeReaderDialog .qrCodeReaderIcon {
+  margin-top: 22px;
+  margin-right: 10px;
 }
