ISSUE #116 - Moved sending of screen change event from home to panel

--- a/plugins/panel/panel.jade
+++ b/plugins/panel/panel.jade
@@ -1,10 +1,10 @@
-div(ng-show="pl.showPanel")
+div(ng-show="vm.showPanel")
 	div#items
-		div(ng-repeat="contentItem in pl.contentItems")
-			panel-content(position="pl.position", content-data='contentItem', ng-show='contentItem.show')
+		div(ng-repeat="contentItem in vm.contentItems")
+			panel-content(position="vm.position", content-data='contentItem', ng-show='contentItem.show')
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 	div#buttons
-		.panelButtonGroup(ng-repeat="contentItem in pl.contentItems")
-			md-button.md-fab.md-primary.md-mini(ng-click="pl.buttonClick(contentItem.type)", aria-label="{{contentItem.title}}")
+		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems")
+			md-button.md-fab.md-primary.md-mini(ng-click="vm.buttonClick(contentItem.type)", aria-label="{{contentItem.title}}")
 				md-icon(class="fa", md-font-icon="{{contentItem.icon}}")
 		label {{contentItem.title}}
