--- a/public/plugins/panel/panel.css
+++ b/public/plugins/panel/panel.css
@@ -59,8 +59,16 @@ panel-content {
 }
 
 panel-content md-content {
-  height: 100%;
+  height: calc(100% - 48px);
   overflow-x: hidden;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+panel-content .md-whiteframe-1dp {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 panel-content md-toolbar {
@@ -70,6 +78,8 @@ panel-content md-toolbar {
   /*-webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.15);
   -moz-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.15);
   box-shadow: 0 8px 10px 1px rgba(0,0,0,0.15);*/
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 panel-content md-toolbar span {
   font-size: 18px;
