--- a/public/plugins/docs/docs.css
+++ b/public/plugins/docs/docs.css
@@ -1,4 +1,37 @@
+docs .docList {
+  padding: 15px 15px 5px 15px;
+  outline: none;
+}
+docs div:hover {
+  cursor: pointer;
+}
+
 docs md-icon {
-  margin: 0 4px 4px 0 !important;
+  margin: 0 10px 2px 0 !important;
   font-size: large !important;
+  color: #7986CB;
+}
+
+docs .docsLoadInfo {
+  padding: 15px;
+}
+.docsDialog {
+  min-width: 850px;
+  min-height: 664px;
+}
+
+.docsDialog .docIcon {
+  margin-top: 22px;
+  margin-right: 10px;
+}
+
+.docsDialog .documentContainer {
+  position: absolute;
+  top: 64px;
+}
+
+.docsDialog iframe {
+  border-style: none;
+  min-width: 850px;
+  min-height: 600px;
 }
