--- a/plugins/issues/issue.jade
+++ b/plugins/issues/issue.jade
@@ -6,6 +6,7 @@
 				.issueTitleInfo(layout="row" layout-align="space-between center")
 					p {{vm.data.owner}}
 					p {{vm.data.timeStamp}}
+		.issueRoleMarker(style="background:{{vm.data.roleColour}}")
 
 		.issueInfo(ng-if="vm.showInfo", layout="row" layout-align="start center")
 			div(flex)
@@ -35,5 +36,26 @@
 			.issueCommentsFooter(layout="row", layout-align="start center")
 				md-button.md-raised.md-accent(ng-click="vm.saveComment()", ng-disabled="vm.saveCommentDisabled", ng-if="vm.issueIsOpen") Save
 				md-button.md-primary.md-accent(ng-click="vm.closeIssue()", ng-if="vm.issueIsOpen") Close issue
+
+			div(layout="column", class="chipsdemoContactChips")
+				md-contact-chips(
+					ng-model="vm.assignedRoles"
+					md-contacts="vm.querySearch($query)"
+					md-contact-name="name"
+					md-require-match="true"
+					md-highlight-flags="i"
+					filter-selected="true"
+					placeholder="Assign issue to")
+
+				md-list.fixedRows
+					md-subheader.md-no-sticky Roles
+					md-list-item.md-1-line.contact-item(ng-repeat="role in vm.roles", ng-if="vm.assignedRoles.indexOf(role) < 0")
+						.md-list-item-text(compact)
+							p {{role.name}}
+					md-list-item.md-1-line.contact-item.selected(ng-repeat="role in vm.assignedRoles")
+						.md-list-item-text(compact)
+							p {{role.name}}
+
+				md-button.md-primary.md-accent(ng-click="vm.saveIssueAssignment()", ng-if="vm.issueIsOpen") Save
 
 	md-divider
