--- a/public/plugins/issues/issues.css
+++ b/public/plugins/issues/issues.css
@@ -23,6 +23,9 @@ issues md-list {
 issues .issuesInfo {
   text-align: center;
   padding: 15px;
+  background: #E8EAF6;
+  margin: 15px;
+  border-radius: 4px;
 }
 issues .issuesInfo p {
   margin: 0;
