ISSUE #124 - Saving issue with role working and issue colours take role colours

--- a/plugins/issues/issue.jade
+++ b/plugins/issues/issue.jade
@@ -6,7 +6,7 @@
 				.issueTitleInfo(layout="row" layout-align="space-between center")
 					p {{vm.data.owner}}
 					p {{vm.data.timeStamp}}
-		.issueRoleMarker(style="background:{{vm.data.roleColour}}")
+		.issueRoleMarker(style="background:{{vm.creatorRoleColor}}")
 
 		.issueInfo(ng-if="vm.showInfo", layout="row" layout-align="start center")
 			div(flex)
@@ -37,9 +37,21 @@
 				md-button.md-raised.md-accent(ng-click="vm.saveComment()", ng-disabled="vm.saveCommentDisabled", ng-if="vm.issueIsOpen") Save
 				md-button.md-primary.md-accent(ng-click="vm.closeIssue()", ng-if="vm.issueIsOpen") Close issue
 
-			.issueAssignedTo
-				label(ng-click="vm.toggleShowAssignedRoles()") Assigned to roles
-				.issueAssignedToList(ng-if="vm.showAssignedRoles")
+			md-menu(ng-show="vm.issueIsOpen")
+				md-button(ng-click="vm.openAssignedRolesMenu($mdOpenMenu, $event)") Assigned to roles
+				md-menu-content(width="4")
+					md-menu-item(ng-repeat="role in vm.roles")
+						div(layout="row", layout-align="space-between center")
+							div(layout="row", layout-align="start center")
+								.issueAssignColourMarker(style="background:{{role.color}}")
+								| {{role.role}}
+							md-checkbox.md-secondary(ng-model="role.assigned", aria-label="Issue Assign")
+					md-menu-item
+						md-button.md-primary.md-hue-1
+							h5 Close
+
+				//label(ng-click="vm.toggleShowAssignedRoles()") Assigned to roles
+				//.issueAssignedToList(ng-if="vm.showAssignedRoles")
 					md-list(ng-cloak)
 						md-list-item(ng-repeat="role in vm.roles")
 							.issueRoleMarker(style="background:{{role.color}}")
