ISSUE #133 - Ability to change the background in the config file

--- a/plugins/login/login.jade
+++ b/plugins/login/login.jade
@@ -1,4 +1,4 @@
-.container-fluid#loginPage
+.container-fluid#loginPage(ng-style="{'background-size': contain, 'background-image':'url(' + backgroundImage + ')'}")
 	.row
 		.col-md-4.col-md-offset-2
 			h1 3D BIM ver­sion con­trol
