--- a/public/plugins/issues/issues.css
+++ b/public/plugins/issues/issues.css
@@ -77,11 +77,10 @@ issue .issueHeader .issueTitle {
   height: 100%;
 }
 
-issue .issueHeader .issueRoleMarker {
+issue .issueHeader .issueRoleMarkers {
   position: absolute;
   top: 0;
   left: 0;
-  display: block;
   width: 10px;
   height: 100%;
 }
@@ -133,42 +132,12 @@ issue .issueCommentsContainer .issueCommentsFooter {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.issueAssignColourMarker {
+md-list-item.issueRole {
+  padding: 0;
+}
+md-list-item .issueAssignColourMarker {
   display: block;
   width: 10px;
   height: 25px;
   margin-right: 10px;
 }
-
-/*
-issue .issueAssignedTo {
-  display: block;
-  height: 210px;
-}
-issue .issueAssignedTo label {
-  margin: 10px 0 10px 10px;
-  font-weight: normal;
-}
-
-issue .issueAssignedTo .issueAssignedToList {
-  display: block;
-  width: 100%;
-  height: 150px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  overflow: auto;
-}
-issue .issueAssignedTo .issueAssignedToList md-list-item {
-  padding: 0;
-  min-height: 40px;
-}
-issue .issueAssignedTo .issueAssignedToList md-list-item .md-list-item-inner {
-  min-height: 40px;
-}
-issue .issueAssignedTo .issueAssignedToList .issueRoleMarker {
-  position: relative;
-  margin-right: 10px;
-}
-issue .issueAssignedTo .issueAssignedToList p {
-  color: rgba(0, 0, 0, 0.6);
-}
-*/
