ISSUE #124 - Refined user ability to modify an issue

--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -21,7 +21,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		// Predefine the app
 		script.
-			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'ngMaterial', 'ui.tree', 'ngAnimate', 'ngSanitize'])
+			angular.module('3drepo', ['ui.router', 'ngMaterial', 'ngAnimate', 'ngSanitize'])
 			.constant('structure', !{structure})
 			.constant('parentStates', !{parentStateJSON})
 			//.constant('pluginLevels', !{pluginLevelsJSON})
