ISSUE #124 - Added function to change the colour of the pins

--- a/plugins/issues/issues.jade
+++ b/plugins/issues/issues.jade
@@ -20,7 +20,7 @@ md-list(ng-if="!vm.showIssuesInfo")
 		on-comments-toggled="vm.commentsToggled(issueId)"
 		comments-toggled-issue-id="vm.commentsToggledIssueId"
 		on-toggle-close-issue="vm.toggleCloseIssue(issue)"
-		available-roles="vm.avialableRoles"
+		available-roles="vm.availableRoles"
 		project-user-roles="vm.projectUserRoles"
 		on-issue-assign-change="vm.showPins()")
 
