--- a/plugins/bid/bid.jade
+++ b/plugins/bid/bid.jade
@@ -1,7 +1,49 @@
-md-toolbar(flex=80)
-	.md-toolbar-tools
-		h2
-			span Bid 4 Free: {{vm.StateManager.state.project}} ({{vm.StateManager.state.account}})
-		span(flex)
-		md-button.md-icon-button(aria-label="Home", ng-click="vm.home($event)")
-			md-icon(class="fa fa-home")
+.bidHeader.md-whiteframe-1dp(flex="100")
+	md-toolbar
+		.md-toolbar-tools
+			h2
+				span Bid 4 Free: {{vm.StateManager.state.project}} ({{vm.StateManager.state.account}})
+			span(flex)
+			md-button.md-icon-button(aria-label="Home", ng-click="vm.home($event)")
+				md-icon(class="fa fa-home")
+
+.bidContent(layout="row" layout-align="space-between start")
+	.bidSummary.md-whiteframe-1dp(flex=45)
+		md-toolbar
+			.md-toolbar-tools
+				h2
+					span Summary
+		.bidSummaryContent
+			md-content(layout-padding)
+				md-input-container.md-block
+					label Budget
+					input(required type="number" step="any" name="budget" ng-model="vm.budget")
+				md-input-container.md-block
+					label Site
+					input(required name="site" ng-model="vm.site")
+				.bidSummaryContentDatePicker
+					h5 Completed by
+					md-datepicker(ng-model="vm.completedBy", md-placeholder="Enter date")
+				md-divider
+				div(layout="row", layout-align="center center")
+					md-button.md-accent Save
+
+	.bidInvite.md-whiteframe-1dp(flex=45)
+			md-toolbar
+				.md-toolbar-tools
+					h2
+						span Invite
+			.bidInviteContent
+				md-content(layout-padding)
+					div(layout="row" layout-align="space-between start")
+						md-input-container.md-block(flex="80")
+							label Sub Contractors
+							md-select(ng-model="vm.subContractor")
+								md-option(ng-repeat="subContractor in vm.subContractors", value="{{subContractor.name}}")
+									| {{subContractor.name}}
+						md-button.md-accent(ng-click="vm.addSubContractor()", ng-disabled="vm.addSubContractorDisabled") Add
+					div
+						md-subheader.md-no-sticky Invited
+						md-list-item(ng-repeat="invited in vm.invitedSubContractors")
+							md-icon(ng-class="invited.invitedIcon")
+							p(ng-click="vm.changeAssignIcon($index)") {{invited.name}}
